Renamed 'Rendezvous' to 'Bonjour'.

--- a/English.lproj/SubEthaEditHelp/html/overview.html
+++ b/English.lproj/SubEthaEditHelp/html/overview.html
@@ -41,7 +41,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Announcing documents<br>
-</b>To allow other users to see the documents you want to share, you have to announce them by clicking on the Announce Toolbar button or pressing &#8679;&#8984;E. After that others see your document in their Rendezvous Browser and can connect by double clicking on it.<br>
+</b>To allow other users to see the documents you want to share, you have to announce them by clicking on the Announce Toolbar button or pressing &#8679;&#8984;E. After that others see your document in their Bonjour Browser and can connect by double clicking on it.<br>
 </td>
 </tr>
 </table>
@@ -50,7 +50,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Inviting People<br>
-</b>To invite people to your documents, just drag them from the Rendezvous or Internet Browser to your document.<br>
+</b>To invite people to your documents, just drag them from the Bonjour or Internet Browser to your document.<br>
 </td>
 </tr>
 </table>
@@ -59,7 +59,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Joining documents<br>
-</b>If you want to join a document on the local subnet, just doubleclick on it in the Rendezvous Browser (&#8984;K). If you want to connect to a document over the internet, open the Internet Browser (&#8679;&#8984;K) and enter the sharing users hostname or IP address in the textfield.<br>
+</b>If you want to join a document on the local subnet, just doubleclick on it in the Bonjour Browser (&#8984;K). If you want to connect to a document over the internet, open the Internet Browser (&#8679;&#8984;K) and enter the sharing users hostname or IP address in the textfield.<br>
 </td>
 </tr>
 </table>
@@ -68,7 +68,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Visible vs. Invisible.<br>
-</b>If you want others to be able to invite you, choose "Always Visible" in the context menu below your name in the Rendezvous Browser. If you need some privacy, choose "Visible if announcing documents".<br>
+</b>If you want others to be able to invite you, choose "Always Visible" in the context menu below your name in the Bonjour Browser. If you need some privacy, choose "Visible if announcing documents".<br>
 </td>
 </tr>
 </table>
