--- a/Localizations/Catalan.lproj/SubEthaEditHelp/html/overview.html
+++ b/Localizations/Catalan.lproj/SubEthaEditHelp/html/overview.html
@@ -41,7 +41,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Anunci de documents<br>
-</b>Per tal d'autoritzar a d'altres usuaris a veure els documents que compartiu cal anunciar-los tot fent clic en el bot&oacute; Anunciar de la Barra d'Eines o pitjant &#8679;&#8984;E. Despr&eacute;s de fer-ho els altres poden veure el document en llur Visualitzador Rendezvous i connectar-s'hi tot fent-hi doble clic.<br>
+</b>Per tal d'autoritzar a d'altres usuaris a veure els documents que compartiu cal anunciar-los tot fent clic en el bot&oacute; Anunciar de la Barra d'Eines o pitjant &#8679;&#8984;E. Despr&eacute;s de fer-ho els altres poden veure el document en llur Visualitzador Bonjour i connectar-s'hi tot fent-hi doble clic.<br>
 </td>
 </tr>
 </table>
@@ -50,7 +50,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Convidar-hi Gent<br>
-</b>Per tal de convidar gent als vostres documents arrossegueu-los des de Rendezvous o des del Visualitzador Web sobre el vostre document.<br>
+</b>Per tal de convidar gent als vostres documents arrossegueu-los des de Bonjour o des del Visualitzador Web sobre el vostre document.<br>
 </td>
 </tr>
 </table>
@@ -59,7 +59,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Unir-se a documents<br>
-</b>Si voleu unir-vos a un document dins la xarxa local simplement feu-hi doble clic en el Visualitzador Rendezvous (&#8984;K). Si voleu unir-vos a un document a Internet cal obrir el Visualitzador Web (&#8679;&#8984;K) i escriure el nom de l'hoste o el IP de l'usuari en el camp de text.<br>
+</b>Si voleu unir-vos a un document dins la xarxa local simplement feu-hi doble clic en el Visualitzador Bonjour (&#8984;K). Si voleu unir-vos a un document a Internet cal obrir el Visualitzador Web (&#8679;&#8984;K) i escriure el nom de l'hoste o el IP de l'usuari en el camp de text.<br>
 </td>
 </tr>
 </table>
@@ -68,7 +68,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Visible o Invisible<br>
-</b>Si voleu que els altres us convidin cal triar "Sempre Visible" en el emn&uacute, contextual sota del vostre nom en el Visualitzador Rendezvous. Si voleu intimitat cal triar "Visible si s'anuncien documents".<br>
+</b>Si voleu que els altres us convidin cal triar "Sempre Visible" en el emn&uacute, contextual sota del vostre nom en el Visualitzador Bonjour. Si voleu intimitat cal triar "Visible si s'anuncien documents".<br>
 </td>
 </tr>
 </table>
