--- a/Localizations/Danish.lproj/SubEthaEditHelp/html/overview.html
+++ b/Localizations/Danish.lproj/SubEthaEditHelp/html/overview.html
@@ -41,7 +41,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Annoncere dokumenter<br>
-</b>For at lade andre brugere se de dokumenter, du &oslash;nsker at dele, skal du annoncere dem ved at klikke p&aring knappen Annoncer i v&aelig;rkt&oslashjsbj&aelig;lken eller trykke &#8679;&#8984;E. Herefter kan andre se dit dokument i deres Rendezvous-browser og kan forbinde sig ved at dobbeltklikke p&aring; det.<br>
+</b>For at lade andre brugere se de dokumenter, du &oslash;nsker at dele, skal du annoncere dem ved at klikke p&aring knappen Annoncer i v&aelig;rkt&oslashjsbj&aelig;lken eller trykke &#8679;&#8984;E. Herefter kan andre se dit dokument i deres Bonjour-browser og kan forbinde sig ved at dobbeltklikke p&aring; det.<br>
 </td>
 </tr>
 </table>
@@ -50,7 +50,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Invitere andre<br>
-</b>For at invitere andre til dine dokumenter, skal du blot tr&aelig;kke dem fra Rendezvous- eller internetbrowseren til dit dokument.<br>
+</b>For at invitere andre til dine dokumenter, skal du blot tr&aelig;kke dem fra Bonjour- eller internetbrowseren til dit dokument.<br>
 </td>
 </tr>
 </table>
@@ -59,7 +59,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Tilslutte sig dokumenter<br>
-</b>Vil du tilslutte dig et dokument p&aring; et lokalt netv&aelig;rk, skal du blot dobbeltklikke p&aring, det i Rendezvous-browseren (&#8984;K). Vil du tilslutte dig et dokument over internettet, skal du &aring;bne din internetbrowser (&#8679;&#8984;K) og skrive den delende bruger hostname eller IP-adresse i tekstfeltet.<br>
+</b>Vil du tilslutte dig et dokument p&aring; et lokalt netv&aelig;rk, skal du blot dobbeltklikke p&aring, det i Bonjour-browseren (&#8984;K). Vil du tilslutte dig et dokument over internettet, skal du &aring;bne din internetbrowser (&#8679;&#8984;K) og skrive den delende bruger hostname eller IP-adresse i tekstfeltet.<br>
 </td>
 </tr>
 </table>
@@ -68,7 +68,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Synlig kontra usynlig.<br>
-</b>Vil du lade andre kunne invitere dig, v&aelig;lg da "Altid synlig" i genvejsmenuen under dit navn i Rendezvous-browseren. &Oslash;nsker du at v&aelig;re uforstyrret, v&aelig;lg da "Synlig ved annoncering af dokumenter".<br>
+</b>Vil du lade andre kunne invitere dig, v&aelig;lg da "Altid synlig" i genvejsmenuen under dit navn i Bonjour-browseren. &Oslash;nsker du at v&aelig;re uforstyrret, v&aelig;lg da "Synlig ved annoncering af dokumenter".<br>
 </td>
 </tr>
 </table>
