--- a/Localizations/German.lproj/SubEthaEditHelp/html/overview.html
+++ b/Localizations/German.lproj/SubEthaEditHelp/html/overview.html
@@ -42,7 +42,7 @@
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Dokumente ank&uuml;ndigen<br>
 </b>
-Damit andere Benutzer Ihre Dokumente sehen k&ouml;nnen m&uuml;ssen Sie diese ank&uuml;ndingen. Dazu klicken Sie einfach das Ank&uuml;ndigen-Symbol in der Symbolleiste des Dokuments oder dr&uuml;cken &#8679;&#8984;E. Nun sehen die anderen Benutzer Ihr Dokument in ihrem Rendezvous-Fenster und k&ouml;nnen mit einem Doppelklick darauf teilnehmen.
+Damit andere Benutzer Ihre Dokumente sehen k&ouml;nnen m&uuml;ssen Sie diese ank&uuml;ndingen. Dazu klicken Sie einfach das Ank&uuml;ndigen-Symbol in der Symbolleiste des Dokuments oder dr&uuml;cken &#8679;&#8984;E. Nun sehen die anderen Benutzer Ihr Dokument in ihrem Bonjour-Fenster und k&ouml;nnen mit einem Doppelklick darauf teilnehmen.
 </td>
 </tr>
 </table>
@@ -51,7 +51,7 @@ Damit andere Benutzer Ihre Dokumente sehen k&ouml;nnen m&uuml;ssen Sie diese ank
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Benutzer einladen<br>
-</b>Andere Benutzer k&ouml;nnen Sie in Ihre Dokumente einladen indem Sie sie einfach aus dem Rendezvous oder Internet-Fenster in Ihr Dokument ziehen.<br>
+</b>Andere Benutzer k&ouml;nnen Sie in Ihre Dokumente einladen indem Sie sie einfach aus dem Bonjour oder Internet-Fenster in Ihr Dokument ziehen.<br>
 </td>
 </tr>
 </table>
@@ -60,7 +60,7 @@ Damit andere Benutzer Ihre Dokumente sehen k&ouml;nnen m&uuml;ssen Sie diese ank
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>An Dokumenten teilnehmen<br>
-</b>Wenn Sie an einem Dokument in Ihrem Subnetz teilnehmen wollen w&auml;hlen Sie dieses durch Doppelklicken in Ihrem Rendezvous-Fenster (&#8984;K) aus. Um eine Verbindung &uuml;ber das Internet herzustellen, &ouml;ffnen Sie das Internet-Fenster (&#8679;&#8984;K) und geben den Rechnernamen oder die IP-Adresse des Benutzers an, der das gew&uuml;nschte Dokument freigegeben hat.<br>
+</b>Wenn Sie an einem Dokument in Ihrem Subnetz teilnehmen wollen w&auml;hlen Sie dieses durch Doppelklicken in Ihrem Bonjour-Fenster (&#8984;K) aus. Um eine Verbindung &uuml;ber das Internet herzustellen, &ouml;ffnen Sie das Internet-Fenster (&#8679;&#8984;K) und geben den Rechnernamen oder die IP-Adresse des Benutzers an, der das gew&uuml;nschte Dokument freigegeben hat.<br>
 </td>
 </tr>
 </table>
@@ -69,7 +69,7 @@ Damit andere Benutzer Ihre Dokumente sehen k&ouml;nnen m&uuml;ssen Sie diese ank
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Sichtbar oder Unsichtbar?<br>
-</b>Wenn Sie es anderen erm&ouml;glichen wollen Sie einzuladen w&auml;hlen Sie &quot;Immer sichtbar&quot; im Men&uuml; unterhalb Ihres Names im Rendezvous-Fenster. F&uuml;r den Fall, dass Sie nicht gesehen werden wollen w&auml;hlen Sie &quot;Sichtbar, wenn Dokumente angek&uuml;ndigt sind&quot;.<br>
+</b>Wenn Sie es anderen erm&ouml;glichen wollen Sie einzuladen w&auml;hlen Sie &quot;Immer sichtbar&quot; im Men&uuml; unterhalb Ihres Names im Bonjour-Fenster. F&uuml;r den Fall, dass Sie nicht gesehen werden wollen w&auml;hlen Sie &quot;Sichtbar, wenn Dokumente angek&uuml;ndigt sind&quot;.<br>
 </td>
 </tr>
 </table>
