--- a/Localizations/Japanese.lproj/SubEthaEditHelp/html/overview.html
+++ b/Localizations/Japanese.lproj/SubEthaEditHelp/html/overview.html
@@ -41,7 +41,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>書類の告知<br>
-</b>共有したい書類を他のユーザが見れるようにするには、ツールバーの告知ボタンをクリックするか &#8679;&#8984;E を押す事でそうした書類を告知する必要があります。そうする事で他の人は Rendezvous ブラウザであなたの書類を発見でき、それをダブルクリックする事で接続できます。<br>
+</b>共有したい書類を他のユーザが見れるようにするには、ツールバーの告知ボタンをクリックするか &#8679;&#8984;E を押す事でそうした書類を告知する必要があります。そうする事で他の人は Bonjour ブラウザであなたの書類を発見でき、それをダブルクリックする事で接続できます。<br>
 </td>
 </tr>
 </table>
@@ -50,7 +50,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>招待<br>
-</b>人々をあなたの書類に招待するには、Rendezvous もしくはインターネットブラウザからユーザを書類にドラッグするだけです。<br>
+</b>人々をあなたの書類に招待するには、Bonjour もしくはインターネットブラウザからユーザを書類にドラッグするだけです。<br>
 </td>
 </tr>
 </table>
@@ -59,7 +59,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>書類へ参加<br>
-</b>ローカルサブネット上の書類へ参加したい場合は、Rendezvous ブラウザ (&#8984;K) でその書類をダブルクリックするだけです。インターネット経由で書類に接続したい場合は、インターネットブラウザ (&#8679;&#8984;K) を開き共有をかけているユーザのホスト名か IP アドレスをテキストフィールドへ入力してください。<br>
+</b>ローカルサブネット上の書類へ参加したい場合は、Bonjour ブラウザ (&#8984;K) でその書類をダブルクリックするだけです。インターネット経由で書類に接続したい場合は、インターネットブラウザ (&#8679;&#8984;K) を開き共有をかけているユーザのホスト名か IP アドレスをテキストフィールドへ入力してください。<br>
 </td>
 </tr>
 </table>
@@ -68,7 +68,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>可視 v.s. 不可視<br>
-</b>他の人に招待して欲しい場合は、Rendezvous ブラウザのあなたの名前の下にあるメニューから “いつでも可視” を選んでください。ちょっとしたプライバシーが必要であれば、“告知時にのみ可視に” を選んでください。<br>
+</b>他の人に招待して欲しい場合は、Bonjour ブラウザのあなたの名前の下にあるメニューから “いつでも可視” を選んでください。ちょっとしたプライバシーが必要であれば、“告知時にのみ可視に” を選んでください。<br>
 </td>
 </tr>
 </table>
