--- a/Localizations/ru.lproj/SubEthaEditHelp/html/overview.html
+++ b/Localizations/ru.lproj/SubEthaEditHelp/html/overview.html
@@ -41,7 +41,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Ђнонсирование документов<br>
-</b>—тобы разрешить другим пользователЯм видеть документы, которые вы хотите сделать общими, вам необходимо сообщить им об этом, щелкните Ђнонс в панели кнопок или используйте клавиатурное сокращение &#8679;&#8984;E. Џосле этого другие пользователи увидЯт ваш документ в браузере Rendezvous и могут подсоединитьсЯ к нему двойным щелчком.<br>
+</b>—тобы разрешить другим пользователЯм видеть документы, которые вы хотите сделать общими, вам необходимо сообщить им об этом, щелкните Ђнонс в панели кнопок или используйте клавиатурное сокращение &#8679;&#8984;E. Џосле этого другие пользователи увидЯт ваш документ в браузере Bonjour и могут подсоединитьсЯ к нему двойным щелчком.<br>
 </td>
 </tr>
 </table>
@@ -59,7 +59,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Џодсоединение документов<br>
-</b>…сли вы хотите подключитьсЯ к общему документу в локальной сети, просто дважды щелкните по нему в браузере Rendezvous (&#8984;K). …сли же вы хотите подключитьсЯ к документу через интернет, откройте браузер €нтернет (&#8679;&#8984;K) и введите интернет адрес или IP адрес в текстовом поле. <br>
+</b>…сли вы хотите подключитьсЯ к общему документу в локальной сети, просто дважды щелкните по нему в браузере Bonjour (&#8984;K). …сли же вы хотите подключитьсЯ к документу через интернет, откройте браузер €нтернет (&#8679;&#8984;K) и введите интернет адрес или IP адрес в текстовом поле. <br>
 </td>
 </tr>
 </table>
@@ -68,7 +68,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>‚идимый против невидимого<br>
-</b>…сли вы хотите, чтобы другие пользователи могли приглашать вас, выберете в контекстном меню "‚сегда видимый" ниже вашей пиктограммы в браузере Rendezvous. …сли вы хотите, чтобы вас не беспокоили попустому, выберите "‚идимый, если анонсируютсЯ документы". <br>
+</b>…сли вы хотите, чтобы другие пользователи могли приглашать вас, выберете в контекстном меню "‚сегда видимый" ниже вашей пиктограммы в браузере Bonjour. …сли вы хотите, чтобы вас не беспокоили попустому, выберите "‚идимый, если анонсируютсЯ документы". <br>
 </td>
 </tr>
 </table>
