--- a/Localizations/French.lproj/SubEthaEditHelp/html/overview.html
+++ b/Localizations/French.lproj/SubEthaEditHelp/html/overview.html
@@ -41,7 +41,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Partager des documents<br>
-</b>Pour autoriser des utilisateurs &agrave; voir les documents que vous souhaitez partager, vous devez cliquer sur le bouton Partager de la barre d'outils ou presser les touches &#8679;&#8984;E. Ceci fait, ils verront votre document dans leur gestionnaire Rendezvous / OpenTalk et pourront s'y connecter en double-cliquant dessus.<br>
+</b>Pour autoriser des utilisateurs &agrave; voir les documents que vous souhaitez partager, vous devez cliquer sur le bouton Partager de la barre d'outils ou presser les touches &#8679;&#8984;E. Ceci fait, ils verront votre document dans leur gestionnaire Bonjour et pourront s'y connecter en double-cliquant dessus.<br>
 </td>
 </tr>
 </table>
@@ -50,7 +50,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Invitations<br>
-</b>Pour inviter une personne &agrave; rejoindre votre document, glissez l&agrave; dans votre document depuis le gestionnaire Rendezvous ou Internet.<br>
+</b>Pour inviter une personne &agrave; rejoindre votre document, glissez l&agrave; dans votre document depuis le gestionnaire Bonjour ou Internet.<br>
 </td>
 </tr>
 </table>
@@ -59,7 +59,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Rejoindre des documents<br>
-</b>Si vous souhaitez rejoindre un document de votre sous-r&eacute;seau, double-cliquez juste dessus depuis le gestionnaire Rendezvous (&#8984;K). Si vous souhaitez rejoindre un document Internet, ouvrez le gestionnaire Internet (&#8679;&#8984;K) et entrez-y le nom d'h&ocirc;te ou l'adresse IP de la personne partageant le document.<br>
+</b>Si vous souhaitez rejoindre un document de votre sous-r&eacute;seau, double-cliquez juste dessus depuis le gestionnaire Bonjour (&#8984;K). Si vous souhaitez rejoindre un document Internet, ouvrez le gestionnaire Internet (&#8679;&#8984;K) et entrez-y le nom d'h&ocirc;te ou l'adresse IP de la personne partageant le document.<br>
 </td>
 </tr>
 </table>
@@ -68,7 +68,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Visible contre Invisible.<br>
-</b>Si vous souhaitez que les autres utilisateurs puissent vous inviter, vous devez choisir "Toujours visible" dans le menu contextuel du gestionnaire Rendezvous. Pour plus d'intimit&eacute;, vous pouvez choisir "Visible en cas d'annonce".<br>
+</b>Si vous souhaitez que les autres utilisateurs puissent vous inviter, vous devez choisir "Toujours visible" dans le menu contextuel du gestionnaire Bonjour. Pour plus d'intimit&eacute;, vous pouvez choisir "Visible en cas d'annonce".<br>
 </td>
 </tr>
 </table>
