--- a/Localizations/ko.lproj/SubEthaEditHelp/html/overview.html
+++ b/Localizations/ko.lproj/SubEthaEditHelp/html/overview.html
@@ -41,7 +41,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>문서 알리기<br>
-</b>여러분이 공유하고자하는 문서를 다른 사용자들이 볼 수 있도록 하기 위해서 도구 막대의 알리기 버튼을 누르거나 &#8679;&#8984;E키를 눌러야합니다. Rendezvous 브라우저에서 해당 문서를 확인하면 더블 클릭하여 문서 작업에 참가할 수 있습니다.<br>
+</b>여러분이 공유하고자하는 문서를 다른 사용자들이 볼 수 있도록 하기 위해서 도구 막대의 알리기 버튼을 누르거나 &#8679;&#8984;E키를 눌러야합니다. Bonjour 브라우저에서 해당 문서를 확인하면 더블 클릭하여 문서 작업에 참가할 수 있습니다.<br>
 </td>
 </tr>
 </table>
@@ -50,7 +50,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>사람들 초대하기<br>
-</b>현재의 문서 작업에 사람들을 초대하기 위해서는 Rendezvous나 인터넷 브라우저에서 그들을 문서 안으로 끌어오면 됩니다.<br>
+</b>현재의 문서 작업에 사람들을 초대하기 위해서는 Bonjour나 인터넷 브라우저에서 그들을 문서 안으로 끌어오면 됩니다.<br>
 </td>
 </tr>
 </table>
@@ -59,7 +59,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>문서 작업에 참가하기<br>
-</b>로컬 네트워크 상의 문서 작업에 참가하고 싶다면, Rendezvous 브라우저(&#8984;K)에서 해당 문서를 더블 클릭하면 됩니다. 인터넷을 통해 문서 작업에 참가하고 싶다면, 인터넷 브라우저(&#8679;&#8984;K)를 열어 공유 사용자의 호스트 이름이나 IP 주소를 입력하면 됩니다.<br>
+</b>로컬 네트워크 상의 문서 작업에 참가하고 싶다면, Bonjour 브라우저(&#8984;K)에서 해당 문서를 더블 클릭하면 됩니다. 인터넷을 통해 문서 작업에 참가하고 싶다면, 인터넷 브라우저(&#8679;&#8984;K)를 열어 공유 사용자의 호스트 이름이나 IP 주소를 입력하면 됩니다.<br>
 </td>
 </tr>
 </table>
@@ -68,7 +68,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>보이기 vs. 숨기기<br>
-</b>다른 사용자들이 여러분을 초대할 수 있게 하려면 Rendezvous 브라우저의 이름 밑의 메뉴에서 "항상 보이게 하기"를 선택합니다. 프라이버시 보호를 원한다면 "문서 알릴 때 보이게 하기"를 선택하십시오.<br>
+</b>다른 사용자들이 여러분을 초대할 수 있게 하려면 Bonjour 브라우저의 이름 밑의 메뉴에서 "항상 보이게 하기"를 선택합니다. 프라이버시 보호를 원한다면 "문서 알릴 때 보이게 하기"를 선택하십시오.<br>
 </td>
 </tr>
 </table>
