--- a/Localizations/zh_TW.lproj/SubEthaEditHelp/html/overview.html
+++ b/Localizations/zh_TW.lproj/SubEthaEditHelp/html/overview.html
@@ -41,7 +41,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>共享文件<br>
-</b>要讓其他使用者看到您分享出來的文件，您必須按下工具列上的 “啟動共享”，或是 &#8679;&#8984;E 鍵，開始共享這份文件。其他使用者在他們的 Rendezvous 瀏覽器看到你共享出來的文件後，用滑鼠雙擊該文件即可連線。<br>
+</b>要讓其他使用者看到您分享出來的文件，您必須按下工具列上的 “啟動共享”，或是 &#8679;&#8984;E 鍵，開始共享這份文件。其他使用者在他們的 Bonjour 瀏覽器看到你共享出來的文件後，用滑鼠雙擊該文件即可連線。<br>
 </td>
 </tr>
 </table>
@@ -50,7 +50,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>邀請別人<br>
-</b>若想要邀請他人參與編輯您的文件，直接將他們從 Rendezvous 或 Internet 瀏覽器拖到您的文件裡即可。<br>
+</b>若想要邀請他人參與編輯您的文件，直接將他們從 Bonjour 或 Internet 瀏覽器拖到您的文件裡即可。<br>
 </td>
 </tr>
 </table>
@@ -59,7 +59,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>參與編輯<br>
-</b>如果您想要在內部網路內參與某份文件的編輯工作，就職皆在 Rendezvous 瀏覽器 (&#8984;K) 內用滑鼠雙擊該文件即可。如果您想要連到 internet 上某份共享出來的文件, 則請打開 Internet 瀏覽器 (&#8679;&#8984;K) 並在文字欄位輸入該使用者的主機名稱或 IP 位置即可。<br>
+</b>如果您想要在內部網路內參與某份文件的編輯工作，就職皆在 Bonjour 瀏覽器 (&#8984;K) 內用滑鼠雙擊該文件即可。如果您想要連到 internet 上某份共享出來的文件, 則請打開 Internet 瀏覽器 (&#8679;&#8984;K) 並在文字欄位輸入該使用者的主機名稱或 IP 位置即可。<br>
 </td>
 </tr>
 </table>
@@ -68,7 +68,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>在線上 vs. 隱形中<br>
-</b>如果您希望別人能收到別人的邀請，請在 Rendezvous 或 Internet 瀏覽器尋找您名字下方的選單，並設成 “在線上”。如果您希望保有個人隱私，請選擇 “只有共享時才顯示在線上”。<br>
+</b>如果您希望別人能收到別人的邀請，請在 Bonjour 或 Internet 瀏覽器尋找您名字下方的選單，並設成 “在線上”。如果您希望保有個人隱私，請選擇 “只有共享時才顯示在線上”。<br>
 </td>
 </tr>
 </table>
