Replaced the remaining 'Rendezvous' occurrences with 'Bonjour'.

--- a/Localizations/German.lproj/SubEthaEditHelp/html/new.html
+++ b/Localizations/German.lproj/SubEthaEditHelp/html/new.html
@@ -160,7 +160,7 @@
 								</td>
 								<td>
 									<p><FONT FACE="Lucida Grande,Arial, sans-serif"><B>Einladen anderer Benutzern zum gemeinsamen Bearbeiten Ihrer Dokumente</B></FONT><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Sie brauchen nicht l&auml;nger darauf zu warten, dass andere Benutzer an Ihrem Dokument teilnehmen. Wenn Sie Hilfe brauchen, laden Sie einfach andere Benutzer ein, indem Sie sie entweder aus dem Rendezvous- oder Internet-Fenster in Ihr Dokument ziehen.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Sie brauchen nicht l&auml;nger darauf zu warten, dass andere Benutzer an Ihrem Dokument teilnehmen. Wenn Sie Hilfe brauchen, laden Sie einfach andere Benutzer ein, indem Sie sie entweder aus dem Bonjour- oder Internet-Fenster in Ihr Dokument ziehen.<br>
 										</FONT></p>
 								</td>
 							</tr>
