--- a/Localizations/ru.lproj/SubEthaEditHelp/html/overview.html
+++ b/Localizations/ru.lproj/SubEthaEditHelp/html/overview.html
@@ -50,7 +50,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Приглашение людей<br>
-</b>Для того, чтобы пригласить кого либо к редактированию документа, просто перетащите пиктограмму человека в документ из окна браузера Rendezvouz или Интернета.<br>
+</b>Для того, чтобы пригласить кого либо к редактированию документа, просто перетащите пиктограмму человека в документ из окна браузера Bonjour или Интернета.<br>
 </td>
 </tr>
 </table>
