--- a/Localizations/zh_TW.lproj/SubEthaEditHelp/html/new.html
+++ b/Localizations/zh_TW.lproj/SubEthaEditHelp/html/new.html
@@ -170,7 +170,7 @@
 								</td>
 								<td>
 									<p><FONT FACE="Lucida Grande,Arial, sans-serif"><B>新的協同編輯功能: 邀請別人</B></FONT><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">現在您不需要再等待其他人加入您共享出來的文件了。如果您需要別人的幫助，直接（從 Rendezvous 或 Internet 瀏覽器）把使用者拖到文件中，即可以邀請對方參與。就跟數數字ㄧ樣簡單。<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">現在您不需要再等待其他人加入您共享出來的文件了。如果您需要別人的幫助，直接（從 Bonjour 或 Internet 瀏覽器）把使用者拖到文件中，即可以邀請對方參與。就跟數數字ㄧ樣簡單。<br>
 										</FONT></p>
 								</td>
 							</tr>
