* German.lproj/SubEthaEditHelp/html/shortcuts.html   Converted umlaut to HTML entity.
* German.lproj/SubEthaEditHelp/html/new.html
  Fixed typo.

--- a/subethaedit/German.lproj/SubEthaEditHelp/html/shortcuts.html
+++ b/subethaedit/German.lproj/SubEthaEditHelp/html/shortcuts.html
@@ -80,7 +80,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">Dr&uuml;cken Sie &#8984;E zum Benutzen der Auswahl als Suchtext und dr&uuml;cken Sie anschlie&szlig;end &#8997;&#8984;F zum Ausführen der "Alle Suchen"-Funktion.</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Dr&uuml;cken Sie &#8984;E zum Benutzen der Auswahl als Suchtext und dr&uuml;cken Sie anschlie&szlig;end &#8997;&#8984;F zum Ausf&uuml;hren der "Alle Suchen"-Funktion.</FONT></p>
 								</td>
 							</tr>
 						</table>
