--- a/subethaedit/German.lproj/SubEthaEditHelp/html/new.html
+++ b/subethaedit/German.lproj/SubEthaEditHelp/html/new.html
@@ -83,7 +83,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"><b>Authenfiziertes &Ouml;ffnen und Sichern</b></font><br>
+									<p><font face="Lucida Grande,Arial, sans-serif"><b>Authentifiziertes &Ouml;ffnen und Sichern</b></font><br>
 									SubEthaEdit 2.1 erlaubt es Ihnen sich als Administrator zu authentifizieren, um Dateien zu editieren f&uuml;r die Sie nicht die n&ouml;tigen Zugriffsrechte besitzen. Ein Beispiel w&auml;re die Datei <tt>/etc/httpd/httpd.conf</tt>.
 									
 									</p>
