- First bunch of AppleHelp updates, fixes and extensions (Still work in progress)

--- a/subethaedit/English.lproj/SubEthaEditHelp/html/tips.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/tips.html
@@ -102,9 +102,9 @@
 								</td>
 							</tr>
 						</table>
+									<p><font face="Lucida Grande,Arial, sans-serif">For more SubEthaEdit tips and tricks visit <a href="http://www.codingmonkeys.de/blog/">TheCodingMonkeys company blog</a>.
+</FONT></p>
 
-
- 
 
 
 
