--- a/subethaedit/English.lproj/SubEthaEditHelp/html/learn.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/learn.html
@@ -39,9 +39,9 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"><b>Overview<br>
-											</b>Learn what SubEthaEdit is and what you can do with it.<br>
-											<a href="overview.html">Go to overview</a></font></p>
+									<p><font face="Lucida Grande,Arial, sans-serif"><b>Collaboration<br>
+											</b>To learn how to use SubEthaEdit to collaborate <a href="overview.html">click here.</a>
+											</font></p>
 								</td>
 							</tr>
 						</table>
