--- a/subethaedit/English.lproj/SubEthaEditHelp/html/problems.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/problems.html
@@ -49,8 +49,8 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"><b>Is SubEthaEdit 2.0 compatible to 1.x?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">No. Due to its much more evolved network protocol, SubEthaEdit 2.0 can't talk to 1.x clients. However, the new protocol is extensible and ensures future development.<br>
+									<p><font face="Lucida Grande,Arial, sans-serif"><b>Is SubEthaEdit 2.x compatible to 1.x?</b></font><br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">No. Due to its much more evolved network protocol, SubEthaEdit 2.x can't talk to 1.x clients. However, the new protocol is extensible and ensures future development.<br>
 										</FONT></p>
 								</td>
 							</tr>
@@ -62,7 +62,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"><b>I don't see any shared documents. What's wrong?</b></font><br>
+									<p><font face="Lucida Grande,Arial, sans-serif"><b>I don't see the shared documents in my local network. What's wrong?</b></font><br>
 										<FONT FACE="Lucida Grande,Arial, sans-serif">Please check if you have enabled a firewall. If so, please allow SubEthaEdit to use port 6942 to 6951. In case you are using Mac OS X built-in firewall you have to perform these steps: Open "System Preferences &rarr; Sharing &rarr; Firewall". Click on "New" right to the box of allowed ports, choose "Other" in the drawer und enter "6942-6951" for the port number and "SubEthaEdit" for the description.<br>
 										</FONT></p>
 								</td>
@@ -77,7 +77,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>I'm behind a router. How can I work with others over the internet, that also sit behind a router?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">One user has to enable port forwarding on his router. Port 6942 to 6951 should be forwared from the router to the computer. After that the other user should be able to establish a connection to him, which will be used to share documents in both directions. If you need to find out your dynamic IP, for example browse to <a href="http://whatismyip.com">http://whatismyip.com</a><br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">One user has to enable port forwarding on his router. Port 6942 to 6951 should be forwared from the router to the computer. After that the other user should be able to establish a connection to him, which will be used to share documents in both directions. If you need to find out your dynamic IP, for example browse to <a href="http://whatismyip.com">http://whatismyip.com</a>. For detailed instructions regarding port forwarding and networking problems, please <a href="http://www.codingmonkeys.de/subethaedit/nat.html">click here</a>.<br>
 										</FONT></p>
 								</td>
 							</tr>
