--- a/subethaedit/English.lproj/SubEthaEditHelp/html/shortcuts.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/shortcuts.html
@@ -23,7 +23,7 @@
 					<td width="3">&nbsp;</td>
 					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
 					<td width="8">&nbsp;</td>
-					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>Keyboard shortcuts</b></font></td>
+					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>General keyboard shortcuts</b></font></td>
 				</tr>
 				<tr height="10">
 					<td colspan="4" height="10">&nbsp;</td>
@@ -96,7 +96,383 @@
 							</tr>
 						</table>
 
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Open a URL the cursor currently is in with &#8679;&#8984;U</FONT></p>
+								</td>
+							</tr>
+						</table>
 
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Pipe the selection through a shell command with &#8963;&#8997;&#8984;P</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Open a Terminal window at the file's location with &#8679;&#8984;T</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+			<table width="100%" border="0" cellspacing="0" cellpadding="0">
+				<tr valign="bottom" height="28">
+					<td width="3" height="28"></td>
+				</tr>
+				<tr valign="bottom">
+					<td width="3">&nbsp;</td>
+					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
+					<td width="8">&nbsp;</td>
+					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>HTML mode</b></font></td>
+				</tr>
+				<tr height="10">
+					<td colspan="4" height="10">&nbsp;</td>
+				</tr>
+			</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Close the last open tag with &#8997;&#8984;.</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Add a link with &#8679;&#8984;L. Will use contents of the clipboard if it contains a url and the current selection for the link text.</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+			<table width="100%" border="0" cellspacing="0" cellpadding="0">
+				<tr valign="bottom" height="28">
+					<td width="3" height="28"></td>
+				</tr>
+				<tr valign="bottom">
+					<td width="3">&nbsp;</td>
+					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
+					<td width="8">&nbsp;</td>
+					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>Objective-C mode</b></font></td>
+				</tr>
+				<tr height="10">
+					<td colspan="4" height="10">&nbsp;</td>
+				</tr>
+			</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Insert a NSLog containing the current function/method name with &#8679;&#8984;L</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Open corresponding .h or .m file with &#8679;&#8984;O</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Open a file mentioned in the current line with &#8679;&#8997;&#8984;O</FONT></p>
+								</td>
+							</tr>
+						</table>
+						
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Open corresponding Xcode project with &#8679;&#8984;X</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Build using Xcode with &#8984;B</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Comment or uncomment with &#8984;/</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Lookup current selection using <a href="http://homepage.mac.com/aglee/downloads/appkido.html">AppKiDo</a> with &#8679;&#8984;H</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+			<table width="100%" border="0" cellspacing="0" cellpadding="0">
+				<tr valign="bottom" height="28">
+					<td width="3" height="28"></td>
+				</tr>
+				<tr valign="bottom">
+					<td width="3">&nbsp;</td>
+					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
+					<td width="8">&nbsp;</td>
+					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>Perl mode</b></font></td>
+				</tr>
+				<tr height="10">
+					<td colspan="4" height="10">&nbsp;</td>
+				</tr>
+			</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Check syntax with &#8679;&#8984;B</FONT></p>
+								</td>
+							</tr>
+						</table>
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Run script in Terminal with &#8963;&#8984;R</FONT></p>
+								</td>
+							</tr>
+						</table>
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Lookup current selection using perldoc.perl.org with &#8679;&#8984;H</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+			<table width="100%" border="0" cellspacing="0" cellpadding="0">
+				<tr valign="bottom" height="28">
+					<td width="3" height="28"></td>
+				</tr>
+				<tr valign="bottom">
+					<td width="3">&nbsp;</td>
+					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
+					<td width="8">&nbsp;</td>
+					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>PHP mode</b></font></td>
+				</tr>
+				<tr height="10">
+					<td colspan="4" height="10">&nbsp;</td>
+				</tr>
+			</table>
+
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Check syntax with &#8679;&#8984;B</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Add a link with &#8679;&#8984;L. Will use contents of the clipboard if it contains a url and the current selection for the link text.</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Lookup current selection using php.net with &#8679;&#8984;H</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+			<table width="100%" border="0" cellspacing="0" cellpadding="0">
+				<tr valign="bottom" height="28">
+					<td width="3" height="28"></td>
+				</tr>
+				<tr valign="bottom">
+					<td width="3">&nbsp;</td>
+					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
+					<td width="8">&nbsp;</td>
+					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>Python mode</b></font></td>
+				</tr>
+				<tr height="10">
+					<td colspan="4" height="10">&nbsp;</td>
+				</tr>
+			</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Check syntax with &#8679;&#8984;B</FONT></p>
+								</td>
+							</tr>
+						</table>
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Run script in Terminal with &#8963;&#8984;R</FONT></p>
+								</td>
+							</tr>
+						</table>
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Lookup current selection using python.net with &#8679;&#8984;H</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+			<table width="100%" border="0" cellspacing="0" cellpadding="0">
+				<tr valign="bottom" height="28">
+					<td width="3" height="28"></td>
+				</tr>
+				<tr valign="bottom">
+					<td width="3">&nbsp;</td>
+					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
+					<td width="8">&nbsp;</td>
+					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>Ruby mode</b></font></td>
+				</tr>
+				<tr height="10">
+					<td colspan="4" height="10">&nbsp;</td>
+				</tr>
+			</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Check syntax with &#8679;&#8984;B</FONT></p>
+								</td>
+							</tr>
+						</table>
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Run script in Terminal with &#8963;&#8984;R</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+			<table width="100%" border="0" cellspacing="0" cellpadding="0">
+				<tr valign="bottom" height="28">
+					<td width="3" height="28"></td>
+				</tr>
+				<tr valign="bottom">
+					<td width="3">&nbsp;</td>
+					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
+					<td width="8">&nbsp;</td>
+					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>XML mode</b></font></td>
+				</tr>
+				<tr height="10">
+					<td colspan="4" height="10">&nbsp;</td>
+				</tr>
+			</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Close the last open tag with &#8997;&#8984;.</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Check well formedness with &#8679;&#8984;B</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+<br/><br/>
 		</div>
 	</body>
 
