Updated german help.

--- a/subethaedit/English.lproj/SubEthaEditHelp/html/new.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/new.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<title>What's new in SubEthaEdit</title>
-		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
+		<meta name="copyright" content="Copyright 2004-2006 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="keywords" content="new, overview, changed, changes">
-		<meta name="description" content="Learn about the new things you can do using SubEthaEdit 2.0.">
+		<meta name="description" content="Learn about the new things you can do using SubEthaEdit 2.5.">
 		<link href="../css/task_tbl_style.css" rel="stylesheet" media="all">
 		<style type="text/css" media="all"><!--
 #mainbox { background-color: #fff; margin-top: 0px; margin-right: 26px; margin-left: 8px; position: absolute; top: 10px; left: 0px; visibility: visible; display: block }
