--- a/subethaedit/English.lproj/SubEthaEditHelp/html/overview.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/overview.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<title>Collaboration</title>
-		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
+		<meta name="copyright" content="Copyright 2004-2006 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="keywords" content="overview, at a glance, tutorial, keyboard shortcuts, tips, learn, novice">
 		<meta name="description" content="Learn about SubEthaEdit.">
 		<link href="../css/task_tbl_style.css" rel="stylesheet" media="all">
