--- a/subethaedit/German.lproj/SubEthaEditHelp/html/learn.html
+++ b/subethaedit/German.lproj/SubEthaEditHelp/html/learn.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<title>Informationen &uuml;ber SubEthaEdit</title>
-		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
+		<meta name="copyright" content="Copyright 2004-2006 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="keywords" content="&Uuml;berblick, auf einen Blick, Tutorial, Kurzbefehle, Tipp, lernen, Neuling">
 		<meta name="description" content="Informationen &uuml;ber SubEthaEdit.">
 		<link href="../css/task_tbl_style.css" rel="stylesheet" media="all">
@@ -39,9 +39,9 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"><b>&Uuml;berblick<br>
-											</b>Informieren Sie sich &uuml;ber SubEthaEdit und seine Funktionsweise.<br>
-											<a href="overview.html">Bitte die Seite &quot;&Uuml;berblick&quot; anzeigen.</a></font></p>
+									<p><font face="Lucida Grande,Arial, sans-serif"><b>Zusammenarbeit<br>
+											</b>Informieren Sie sich wie Sie mit Hilfe von SubEthaEdit zusammenarbeiten k&ouml;nnen.<br>
+											<a href="overview.html">Bitte die Seite &quot;Zusammenarbeit&quot; anzeigen.</a></font></p>
 								</td>
 							</tr>
 						</table>
