--- a/subethaedit/German.lproj/SubEthaEditHelp/html/overview.html
+++ b/subethaedit/German.lproj/SubEthaEditHelp/html/overview.html
@@ -2,10 +2,10 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<title>&Uuml;berblick</title>
-		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
+		<title>Zusammenarbeit</title>
+		<meta name="copyright" content="Copyright 2004-2006 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="keywords" content="neu, &Uuml;berblick, ge&auml;ndert, &Auml;nderungen">
-		<meta name="description" content="Informieren Sie sich &uuml;ber die Neuerungen in SubEthaEdit 2.0.">
+		<meta name="description" content="Informieren Sie sich &uuml;ber SubEthaEdit">
 		<link href="../css/task_tbl_style.css" rel="stylesheet" media="all">
 		<style type="text/css" media="all"><!--
 #mainbox { background-color: #fff; margin-top: 0px; margin-right: 26px; margin-left: 8px; position: absolute; top: 10px; left: 0px; visibility: visible; display: block }
@@ -23,7 +23,7 @@
 					<td width="3">&nbsp;</td>
 					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
 					<td width="8">&nbsp;</td>
-					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>&Uuml;berblick</b></font></td>
+					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>Zusammenarbeit</b></font></td>
 				</tr>
 				<tr height="10">
 					<td colspan="4" height="10">&nbsp;</td>
