--- a/subethaedit/German.lproj/SubEthaEditHelp/html/problems.html
+++ b/subethaedit/German.lproj/SubEthaEditHelp/html/problems.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<title>Fehlerbeseitigung</title>
-		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
+		<meta name="copyright" content="Copyright 2004-2006 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="keywords" content="Fehler, Fehlerbeseitigung">
 		<meta name="description" content="Informieren Sie sich, wie Sie Probleme beheben k&ouml;nnen, die m&ouml;glicherweise bei der Verwendung von SubEthaEdit auftreten.">
 		<link href="../css/task_tbl_style.css" rel="stylesheet" media="all">
@@ -49,8 +49,8 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"><b>Ist SubEthaEdit 2.0 kompatibel mit der vorangegangenen Version?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Nein. Aufgrund seines wesentlich weiter entwickelten Netzwerk-Protokolls kann sich SubEthaEdit 2.0 nicht mit vorangegangenen Programmversionen verst&auml;ndigen. Jedoch ist das neue Protokoll erweiterbar und bietet somit Raum f&uuml;r zuk&uuml;nftige Entwicklungen.<br>
+									<p><font face="Lucida Grande,Arial, sans-serif"><b>Ist SubEthaEdit 2.x kompatibel mit der vorangegangenen Version?</b></font><br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Nein. Aufgrund seines wesentlich weiter entwickelten Netzwerk-Protokolls kann sich SubEthaEdit 2.x nicht mit vorangegangenen Programmversionen verst&auml;ndigen. Jedoch ist das neue Protokoll erweiterbar und bietet somit Raum f&uuml;r zuk&uuml;nftige Entwicklungen.<br>
 										</FONT></p>
 								</td>
 							</tr>
@@ -79,7 +79,8 @@
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Ich befinde mich hinter einem NAT-Router. Wie kann ich mmit anderen &uuml;ber das Internet zusammenarbeiten, die sich ebenfalls hinter einem NAT-Router befinden?
 									</b></font><br>
 										<FONT FACE="Lucida Grande,Arial, sans-serif">Ein Benutzer mu&szlig; an seinem NAT-Router Port-Weiterleitung aktivieren. Die Ports 6942 bis 6951 m&uuml;ssen vom NAT-Router zum Computer weitergeleitet werden. Nun sollte der andere Benutzer eine Verbindung aufbauen k&ouml;nnen, die nun beiden Seiten zum Freigeben von Dokumenten genutzt werden kann. Wenn Sie mit Ihrem Web-Browser <a href="http://whatismyip.com">http://whatismyip.com</a> laden, k&ouml;nnen Sie Ihre dynamisch zugewiesene IP-Adresse herausfinden.<br>
-										</FONT></p>
+										</FONT>
+<FONT FACE="Lucida Grande,Arial, sans-serif"><a href="http://www.codingmonkeys.de/subethaedit/nat.de.html">Bitte die Seite "Informationen &uuml;ber NAT" anzeigen.</a></FONT>										</p>
 								</td>
 							</tr>
 						</table>
