--- a/subethaedit/German.lproj/SubEthaEditHelp/html/tips.html
+++ b/subethaedit/German.lproj/SubEthaEditHelp/html/tips.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<title>Tipps</title>
-		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
+		<meta name="copyright" content="Copyright 2004-2006 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="keywords" content="Tricks, Kurzbefehle">
 		<meta name="description" content="Informieren Sie sich &uuml;ber Tipps und Tricks, mit denen Sie effizienter arbeiten k&ouml;nnen.">
 		<link href="../css/task_tbl_style.css" rel="stylesheet" media="all">
@@ -103,8 +103,8 @@
 							</tr>
 						</table>
  
-
-
+<p><font face="Lucida Grande,Arial, sans-serif">Weitere Tipps finden Sie auf dem <a href="http://www.codingmonkeys.de/blog/">TheCodingMonkeys Firmen-Blog</a>.
+</FONT></p>
 
 		</div>
 	</body>
