--- a/subethaedit/English.lproj/SubEthaEditHelp/html/problems.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/problems.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<title>Solving problems</title>
-		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
+		<meta name="copyright" content="Copyright 2004-2006 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="keywords" content="trouble, troubleshooting">
 		<meta name="description" content="Learn how to solve problems you might have while using SubEthaEdit.">
 		<link href="../css/task_tbl_style.css" rel="stylesheet" media="all">
