--- a/subethaedit/English.lproj/SubEthaEditHelp/html/tips.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/tips.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<title>Tips</title>
-		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
+		<meta name="copyright" content="Copyright 2004-2006 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="keywords" content="shortcuts, tips">
 		<meta name="description" content="Learn tips and tricks that you can do to work more efficiently.">
 		<link href="../css/task_tbl_style.css" rel="stylesheet" media="all">
