--- a/subethaedit/German.lproj/SubEthaEditHelp/SubEthaEdit Help.html
+++ b/subethaedit/German.lproj/SubEthaEditHelp/SubEthaEdit Help.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<title>SubEthaEdit Hilfe</title>
-		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
+		<meta name="copyright" content="Copyright 2004-2006 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="AppleTitle" content="SubEthaEdit Hilfe">
 		<meta name="AppleIcon" content="SubEthaEditHelp/img/favicon.png">
 		<meta name="robots" content="anchors">
