Fixing Typo in Help

--- a/subethaedit/English.lproj/SubEthaEditHelp/html/problems.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/problems.html
@@ -77,7 +77,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>I'm behind a router. How can I work with others over the internet, that also sit behind a router?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">One user has to enable port forwarding on his router. Port 6942 to 6951 should be forwared from the router to the computer. After that the other user should be able to establish a connection to him, which will be used to share documents in both directions. If you need to find out your dynamic IP, for example browse to <a href="http://whatismyip.com">http://whatismyip.com</a>. For detailed instructions regarding port forwarding and networking problems, please <a href="http://www.codingmonkeys.de/subethaedit/nat.html">click here</a>.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">One user has to enable port forwarding on his router. Port 6942 to 6951 should be forwarded from the router to the computer. After that the other user should be able to establish a connection to him, which will be used to share documents in both directions. If you need to find out your dynamic IP, for example browse to <a href="http://whatismyip.com">http://whatismyip.com</a>. For detailed instructions regarding port forwarding and networking problems, please <a href="http://www.codingmonkeys.de/subethaedit/nat.html">click here</a>.<br>
 										</FONT></p>
 								</td>
 							</tr>
