--- a/German.lproj/SubEthaEditHelp/html/new.html
+++ b/German.lproj/SubEthaEditHelp/html/new.html
@@ -42,7 +42,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Arbeiten mit Tabs</b></font><br>
-									Sie k&ouml;nnen mehrere Dokumente in einem Fenster verwalten wobei jedes Dokument durch ein Tab in der Tableiste repr&auml;sentiert wird. Das hilft Ihnen dabei das Durcheinander auf dem Bildschirm, das durch viele gleichzeitig ge&ouml;ffnete Dokumente entstehen kann, zu vermeiden. Das Arbeiten mit Tabs kann mit der herkšmmlichen Arbeitsweise kombiniert werden um Ihnen gr&ouml;&szlig;tm&ouml;gliche Flexibilit&auml;t zu erm&ouml;glichen.
+									Sie k&ouml;nnen mehrere Dokumente in einem Fenster verwalten wobei jedes Dokument durch ein Tab in der Tableiste repr&auml;sentiert wird. Das hilft Ihnen dabei das Durcheinander auf dem Bildschirm, das durch viele gleichzeitig ge&ouml;ffnete Dokumente entstehen kann, zu vermeiden. Das Arbeiten mit Tabs kann mit der herk&ouml;mmlichen Arbeitsweise kombiniert werden um Ihnen gr&ouml;&szlig;tm&ouml;gliche Flexibilit&auml;t zu erm&ouml;glichen.
 									</p>
 								</td>
 							</tr>
