--- a/English.lproj/SubEthaEditHelp/html/new.html
+++ b/English.lproj/SubEthaEditHelp/html/new.html
@@ -55,7 +55,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Syntax Highlighter</b></font><br>
-                        The new and improved Syntax Highlighter in SubEthaEdit 3.0 does it all: nested States, HEREDOC, importing of other Modes. And on top of being more capable and correct it now also ist faster. For more on modes visit the <a href="http://codingmonkeys.de/subethaedit/mode.html">mode development page</a>.
+                        The new and improved Syntax Highlighter in SubEthaEdit 3.0 does it all: nested States, HEREDOC, importing of other Modes. And on top of being more capable and correct it now also is faster. For more on modes visit the <a href="http://codingmonkeys.de/subethaedit/mode.html">mode development page</a>.
 									</p>
 								</td>
 							</tr>
@@ -69,7 +69,7 @@
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Mode Precedence UI</b></font><br>
 									
-									Finally you can change and modifie the rules of automatic mode recoginition using the great mode Precendence UI. Don't like  .h files open in Objective-C mode? Just move the C++ mode up or disable the Trigger in C. You can even add regexes to be found in the contents of the document to trigger a mode.
+									Finally you can modify the rules of automatic mode recognition using the great mode Precedence UI. Don't like .h files open in Objective-C mode? Just move the C++ mode up or disable the Trigger in C. You can even add regexes to be found in the contents of the document to trigger a mode.
 									
 									</p>
 								</td>
