- fixed ruby mode problems with for in do statements - fixed regular expresseion problems in ruby - added some urls in the comments of the test files for testing

--- a/subethaedit/SubEthaPerf/Resources/TestFiles/cocoon-index-all.html
+++ b/subethaedit/SubEthaPerf/Resources/TestFiles/cocoon-index-all.html
@@ -23,7 +23,7 @@ function windowTitle()
 <BODY BGCOLOR="white" onload="windowTitle();">
 
 
-<!-- ========= START OF TOP NAVBAR ======= -->
+<!-- ========= START OF TOP NAVBAR ======= heise.com apple.com -->
 <A NAME="navbar_top"><!-- --></A>
 <A HREF="#skip-navbar_top" title="Skip navigation links"></A>
 <TABLE BORDER="0" WIDTH="100%" CELLPADDING="1" CELLSPACING="0" SUMMARY="">
