--- a/SubEthaEdit-Mac/Documentation/SyntaxScopes/SEESyntaxScopes.html
+++ b/SubEthaEdit-Mac/Documentation/SyntaxScopes/SEESyntaxScopes.html
@@ -47,6 +47,7 @@
     }
     div.syntax_scope_name > tt {
       font-weight: bold;
+      display:block;
     }
     div.syntax_scope {
       margin: 4px 0px;
@@ -78,22 +79,62 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eleifend ipsum ac tortor condimentum posuere. Donec in rhoncus metus. Nullam mollis mollis ante vel pharetra. Duis quis ipsum velit. Fusce commodo consectetur felis, vitae sagittis orci convallis id. Quisque suscipit faucibus justo ut egestas. Maecenas sed lorem elit, nec faucibus velit.</p><p>Ut convallis, risus in gravida eleifend, urna sapien ultricies tellus, eget congue dui ante vitae est. Maecenas luctus tincidunt eros, vel aliquet dui semper sed. In hendrerit facilisis ipsum, eget bibendum purus blandit at. Suspendisse eu urna ut mauris pretium accumsan eu id urna. Maecenas a dolor hendrerit turpis posuere fermentum id eget enim. Donec justo sapien, dictum at consectetur a, posuere sed diam. Nullam a cursus est. Nullam risus orci, commodo id interdum malesuada, dapibus eu metus.</p>
     <h2>Scope Areas</h2>
     <div class="syntax_scope_area">
-    <h3>General</h3>
-    <p>Scopes that may affect all sorts of texts</p>
-    <div class="syntax_scope">
-      <div class="syntax_scope_name"><tt>meta.default</tt></div>
-      <p class="syntax_scope_description">Default fallback scope. All scopes fallback on the defaults of this scope. The <tt>meta.default</tt> scope of the top-level Language Context also defines the base background and foreground color of the document.</p>
+      <h3>General</h3>
+      <p>Scopes that may affect all sorts of texts</p>
+      <div class="syntax_scope">
+        <div class="syntax_scope_name"><tt>meta.default</tt></div>
+        <p class="syntax_scope_description">Default fallback scope. All scopes fallback on the defaults of this scope. The <tt>meta.default</tt> scope of the top-level Language Context also defines the base background and foreground color of the document.</p>
+      </div>
+      <div class="syntax_scope">
+        <div class="syntax_scope_name"><tt>meta.highlight.currentline</tt></div>
+        <p class="syntax_scope_description">Meta scope that defines how the current line is highlighted.</p>
+      </div>
+      <div class="syntax_scope">
+        <div class="syntax_scope_name">
+          <div class="examples">
+            <tt>http://apple.com</tt>
+            <tt>sjobs@me.com</tt>
+          </div>
+          <tt>meta.link</tt>
+          <tt>meta.link.email</tt>
+        </div>
+        <p class="syntax_scope_description">URLs, Emails</p>
+      </div>
     </div>
-    <div class="syntax_scope">
-      <div class="syntax_scope_name"><tt>meta.highlight.currentline</tt></div>
-      <p class="syntax_scope_description">Meta scope that defines how the current line is highlighted.</p>
-    </div>
-    <div class="syntax_scope">
-      <div class="syntax_scope_name"><tt>meta.link</tt><div class="examples"><tt>http://apple.com</tt><tt>sjobs@me.com</tt></div></div>
-      <p class="syntax_scope_description">URLs, Emails</p>
-    </div>
-    </div>
+    <div class="syntax_scope_area">
     <h3>Programming Languages (c,js,php,ruby,…)</h3>
+    <p>Scopes present in programming languages</p>
+      <div class="syntax_scope">
+        <div class="syntax_scope_name">
+        <div class="examples">
+          <tt>// c comment</tt>
+          <tt># bash comment</tt>
+          <tt>/* block comment */</tt>
+          <tt>/** block documentation comment **/</tt>
+        </div>
+<tt>comment</tt>
+<tt>comment.line</tt>
+<tt>comment.line.double-slash</tt>
+<tt>comment.block</tt>
+<tt>comment.block.documentation</tt>
+</div>
+        <p class="syntax_scope_description">All sorts of comments</p>
+      </div>
+
+      <div class="syntax_scope">
+        <div class="syntax_scope_name">
+        <div class="examples">
+          <tt>if return do while</tt>
+          <tt>char int</tt>
+        </div>
+<tt>keyword</tt>
+<tt>keyword.control</tt>
+<tt>keyword.type</tt>
+</div>
+        <p class="syntax_scope_description">Language Keywords</p>
+      </div>
+    
+    </div>
     <h3>Document Structure Langauges (xml, html,…)</h3>
     </div>
   </body>
